--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,36 +5,23 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "aind-registration-utils"
 description = "Generated from aind-library-template"
-license = {text = "MIT"}
+license = { text = "MIT" }
 requires-python = ">=3.7"
-authors = [
-    {name = "Allen Institute for Neural Dynamics"}
-]
-classifiers = [
-    "Programming Language :: Python :: 3"
-]
+authors = [{ name = "Allen Institute for Neural Dynamics" }]
+classifiers = ["Programming Language :: Python :: 3"]
 readme = "README.md"
 dynamic = ["version"]
 
-dependencies = [
-]
+dependencies = ["antspyx >= 0.5", "numpy", "pandas", "SimpleITK"]
 
 [project.optional-dependencies]
-dev = [
-    'black',
-    'coverage',
-    'flake8',
-    'interrogate',
-    'isort',
-    'Sphinx',
-    'furo'
-]
+dev = ['black', 'coverage', 'flake8', 'interrogate', 'isort', 'Sphinx', 'furo']
 
 [tool.setuptools.packages.find]
 where = ["src"]
 
 [tool.setuptools.dynamic]
-version = {attr = "aind_registration_utils.__version__"}
+version = { attr = "aind_registration_utils.__version__" }
 
 [tool.black]
 line-length = 79
@@ -63,10 +50,10 @@ source = ["aind_registration_utils", "tests"]
 
 [tool.coverage.report]
 exclude_lines = [
-    "if __name__ == .__main__.:",
-    "from",
-    "import",
-    "pragma: no cover"
+  "if __name__ == .__main__.:",
+  "from",
+  "import",
+  "pragma: no cover",
 ]
 fail_under = 100
 
