--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,12 +65,12 @@ exclude_lines = [
   "import",
   "pragma: no cover",
 ]
-fail_under = 100
+fail_under = 0
 
 [tool.isort]
 line_length = 79
 profile = "black"
 
 [tool.interrogate]
-exclude = ["setup.py", "docs", "build"]
+exclude = ["setup.py", "docs", "build", "notebooks", "tests"]
 fail-under = 100
