--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
   "pandas>=2,<3",
   "SimpleITK>=2,<3",
   'vtk>=9,<10',
+  'skimage>=0.24,<1',
+  'scipy>=1.13,<2',
 ]
 
 [project.optional-dependencies]
