--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,14 +16,14 @@ readme = "README.md"
 dynamic = ["version"]
 
 dependencies = [
-  "aind_mri_utils>=0.2,<0.3.0",
-  "antspyx>=0.5,<0.7",
+  "aind-anatomical-utils>=0.1,<0.2",
+  "antspyx>=0.2,<0.7",
   "numpy>=1,<3",
   "pandas>=2,<3",
   "SimpleITK>=2,<3",
   'vtk>=9,<10',
-  'scikit-image>=0.24,<1',
-  'scipy>=1.13,<2',
+  'scikit-image>=0.14,<1',
+  'scipy>=1,<2',
 ]
 
 [project.optional-dependencies]
@@ -40,7 +40,7 @@ version = { attr = "aind_registration_utils.__version__" }
 
 [tool.black]
 line-length = 79
-target_version = ['py312']
+target_version = ['py313']
 exclude = '''
 
 (
@@ -61,7 +61,7 @@ exclude = '''
 
 [tool.ruff]
 line-length = 79
-target-version = 'py312'
+target-version = 'py313'
 
 [tool.ruff.lint]
 # pyflakes, pycodestyle, isort
