--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,14 @@ version = "0.2.0"
 
 dependencies = [
   "aind-anatomical-utils>=0.1,<0.3",
+  "aind-ants-transform-sidecar>=0.1,<0.2",
   "antspyx>=0.2,<0.7",
   "numpy>=1,<3",
   "pandas>=2,<3",
+  "scikit-image>=0.14,<1",
+  "scipy>=1,<2",
   "SimpleITK>=2,<3",
-  'vtk>=9,<10',
-  'scikit-image>=0.14,<1',
-  'scipy>=1,<2',
+  "vtk>=9,<10",
 ]
 
 [project.urls]
